// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Header should match snapshoot Case with no props 1`] = `
Array [
  <div
    className="title-container"
    id="title-container"
  >
    <h1>
      Default Title
    </h1>
  </div>,
]
`;

exports[`Component: Header should match snapshoot Case with props title set 1`] = `
Array [
  <div
    className="title-container"
    id="title-container"
  >
    <h1>
      Sample title
    </h1>
  </div>,
]
`;
